--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
 <header class="site-header">
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/"><img src="{{ "/images/kiwifruit-green.png" | prepend: site.baseurl }}" alt="{{ site.title }}" class="logo"></a>
+    <a class="site-title" href="{{ site.baseurl }}/"><img src="{{ "/images/craft-treat-logo.png" | prepend: site.baseurl }}" alt="{{ site.title }}" class="logo"></a>
 
     <h1 class="page-heading">{{ page.title }}</h1>
 
