--- a/css/main.scss
+++ b/css/main.scss
@@ -48,7 +48,7 @@ $base-font-family: 'Nunito Sans', Helvetica, Arial, sans-serif;
 $headings-font-family: 'Nunito', Helvetica, Arial, sans-serif;
 $base-font-size: 20px;
 $text-color: #2c3e50;
-$link-color: #27ae60;
+$link-color: #48dbfb;
 $highlighter-color: #eaff00;
 $concrete-color: #95a5a6;
 $background-color: #ffffff;
